# ChangeLog for media-fonts/oto
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/oto/ChangeLog,v 1.7 2006/07/11 21:10:24 agriffis Exp $

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org> oto-0.4.ebuild:
  Mark 0.4 stable on ia64

  23 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org> oto-0.4.ebuild:
  Stable on sparc

  23 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org> oto-0.4.ebuild:
  Added ~sparc

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> oto-0.4.ebuild:
  virtual/glibc -> virtual/libc

  30 Mar 2004; David Holm <dholm@gentoo.org> oto-0.4.ebuild:
  Added to ~ppc.

*oto-0.4 (30 Mar 2004)

  30 Mar 2004; <matsuu@gentoo.org> metadata.xml, oto-0.4.ebuild:
  Initial import. Bug#46083.
